fixed overflow in div.

--- a/src/components/styles/bottomNavbar.css
+++ b/src/components/styles/bottomNavbar.css
@@ -43,6 +43,7 @@
   position: fixed;
   bottom: 0;
   left: 45%;
+  line-height: 30px;
 }
 
 .nav-container {
