--- a/src/components/styles/driver.css
+++ b/src/components/styles/driver.css
@@ -32,22 +32,22 @@
 .driver-pic {
   margin-bottom: 15px;
   width: 100%;
-  height: 100%;
   position: relative;
-  display: inline;
+  display: block;
 }
 
 .driver-name {
   font-family: "PxGrotesk-Light";
   font-size: 75px;
-  line-height: 70px;
+  line-height: 80px;
+  margin-bottom: 40px;
 }
 
 .driver-bio {
   font-family: "PxGrotesk-Light";
   color: var(--brown);
   font-size: 14px;
-  margin-bottom: 75px;
+  margin-bottom: 60px;
   line-height: 18px;
 }
 
