--- a/src/components/styles/logo.css
+++ b/src/components/styles/logo.css
@@ -19,7 +19,7 @@ header {
 }
 
 .kabob {
-  right: 20px;
+  right: 23px;
   position: absolute;
   z-index: 2px;
   top: 20px;
