--- a/src/components/styles/map.css
+++ b/src/components/styles/map.css
@@ -43,7 +43,11 @@
 .arrival {
   font-family: "PxGrotesk-Light";
   font-size: 80px;
-  line-height: 72px;
+}
+
+.arrival-time {
+  margin-bottom: 0;
+  position: relative;
 }
 
 .vibe-title {
@@ -65,6 +69,13 @@
   bottom: 75px;
   z-index: 1px;
   float: right;
+}
+
+.dropoff-location-info {
+  position: relative;
+  margin-top: 0;
+  padding-top: 0;
+  line-height: 8px;
 }
 
 @media (max-width: 375px) {
